# Page_analyzer

./: .env  Dockerfile  Makefile  README.md  database.sql  docker-compose.yml  pyproject.toml
hexlet-code/page_analyzer/: app.py
hexlet-code/page_analyzer/templates/: index.html  show.html
page_analyzer/: __init__.py  app.py  db.py  functions.py  html.py  urls.py
page_analyzer/templates/: 404.html  500.html  form.html  index.html  show.html  urls.html
